# bitchat

bitchat-rust/: .gitignore  Cargo.toml
bitchat-rust/src/: ble.rs  command.rs  compression.rs  geohash.rs  identity.rs  main.rs  network.rs  noise.rs  protocol.rs
