[package]
name = "bitchat-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.27"
tokio = { version = "1", features = ["full"] }
btleplug = "0.11"
snow = { version = "0.9", features = ["ring-accelerated"] }
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
sha2 = "0.10"
tracing = "0.1"
tracing-subscriber = "0.3"
bitflags = { version = "2.5", features = ["serde"] }
uuid = { version = "1.8", features = ["v4", "serde"] }
serde_with = "3.8"
futures = "0.3"
rand = "0.8"
